RBEA-484N: Fixed Phpcs errors and also removed the changes made for RBEA-464: Padding overflowing for all blocks

--- a/admin/css/responsive-block-editor-addons-admin.css
+++ b/admin/css/responsive-block-editor-addons-admin.css
@@ -661,7 +661,7 @@ p .responsive-block-editor-addons-info {
 .rbea-review-btns {
     background-color: #2271b1;
     padding: 10px;
-    max-width: 100px;
+    max-width: 150px;
     text-align: center;
     border-radius: 2px;
 }
@@ -684,9 +684,29 @@ p .responsive-block-editor-addons-info {
     text-decoration: none;
 }
 
-.rbea-review-rate-us-btn > a > i {
+.rbea-review-rate-us-btn > a > i,
+.rbea-review-already-done-btn > a > i {
     margin-left: 5px;
     line-height: inherit;
+}
+
+.rbea-review-notice-text-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.rbea-review-dismiss-btn {
+    display: flex;
+    margin-top: 10px;
+    text-decoration: none;
+}
+
+.rbea-review-dismiss-btn > i {
+    font-size: 15px;
+}
+
+.rbea-review-dismiss-btn > .dashicons-dismiss:before {
+    vertical-align: middle;
 }
 
 @media (max-width: 768px) {
